Correct MemoirSetup with comments, bug fix and TextSetup with comments

--- a/Modules/MemoirSetup.tex
+++ b/Modules/MemoirSetup.tex
@@ -3,11 +3,12 @@
 \newcommand{\HRule}{\rule{\linewidth}{0.8mm}}
 
 %Tekst i fotter
-\usepackage{lastpage}
+\usepackage{lastpage} %Finds last page number
+\usepackage{xspace} %Inserts necesary space bestween the page number, the dash and the total pagenumber
 \newcommand{\footerText}{\thepage\xspace /\pageref{LastPage}}
-\newcommand{\ProjectName}{Project name}
 
 
+% Specific chapter style.
 \chapterstyle{hangnum}
 
 \nouppercaseheads
