Add Prolog as lst-language, add comments for TextSetup, add margin for MemoirSetup

--- a/Modules/MemoirSetup.tex
+++ b/Modules/MemoirSetup.tex
@@ -1,5 +1,8 @@
 %Setup for the 'memoir' package (replace 'article')
 
+%Margin
+\usepackage[left=3cm,right=2cm,top=2.5cm,bottom=2cm]{geometry}
+
 \newcommand{\HRule}{\rule{\linewidth}{0.8mm}}
 
 %Tekst i fotter
