--- a/Modules/CodeBoxesSetup.tex
+++ b/Modules/CodeBoxesSetup.tex
@@ -50,7 +50,7 @@
 %Den skal være 6 pt mindre
 \usepackage{calc}
 \newlength{\mywidth}
-\setlength{\mywidth}{1.43\textwidth}
+\setlength{\mywidth}{1.35\textwidth}
 
 
 % Forskellige styles for forskellige kodetyper
@@ -75,3 +75,4 @@
 \lstdefinestyle{Code-VHDL} {language=VHDL, style=Code}
 \lstdefinestyle{Code-Bash} {language=Bash, style=Code}
 \lstdefinestyle{Code-Matlab} {language=Matlab, style=Code}
+\lstdefinestyle{Code-Prolog} {language=Prolog, style=Code}
