Add TestCase, modify TextSetup with line spacing, remove tablespacing from TableSetup, more notes in MemoirSetup and fix length of headers in CodeBoxesSetup

--- a/Modules/CodeBoxesSetup.tex
+++ b/Modules/CodeBoxesSetup.tex
@@ -50,7 +50,7 @@
 %Den skal være 6 pt mindre
 \usepackage{calc}
 \newlength{\mywidth}
-\setlength{\mywidth}{1.35\textwidth}
+\setlength{\mywidth}{0.988\textwidth} % Hvis bredden header ikke virker er dette hvad skal ændres!
 
 
 % Forskellige styles for forskellige kodetyper
