--- a/Modules/MemoirSetup.tex
+++ b/Modules/MemoirSetup.tex
@@ -3,6 +3,8 @@
 %Margin
 \usepackage[left=3cm,right=2cm,top=2.5cm,bottom=2cm]{geometry}
 
+\linespread{1.5}
+
 \newcommand{\HRule}{\rule{\linewidth}{0.8mm}}
 
 %Tekst i fotter
@@ -12,6 +14,7 @@
 
 
 % Specific chapter style.
+% See more at: ftp://ftp.tex.ac.uk/tex-archive/info/MemoirChapStyles/MemoirChapStyles.pdf
 \chapterstyle{hangnum}
 
 \nouppercaseheads
