--- a/Modules/TableSetup.tex
+++ b/Modules/TableSetup.tex
@@ -6,8 +6,8 @@
 \usepackage{multicol} 
 \usepackage{booktabs}
 \usepackage{wrapfig}
-\renewcommand{\arraystretch}{1.5}
 \usepackage{longtable}
+%\renewcommand{\arraystretch}{1.5}
 
 %Colors in tables
 \usepackage{color, colortbl}
