--- a/Modules/TextSetup.tex
+++ b/Modules/TextSetup.tex
@@ -1,6 +1,6 @@
 %Text typesetting
 %--------------------------------------------------------
-\usepackage{lmodern} % Font
 \usepackage[T1]{fontenc} % Can use danish characters
 \usepackage[utf8]{inputenc} %input encoding. Can be used on Linux, Mac and Windows         
-\usepackage[english]{babel} %Split words accoding to English
+\usepackage[danish]{babel} %Split words accoding to English
+\usepackage{lmodern} % Font
