Add FixMe and Setup, add automatic linebreak

--- a/TextSetup.tex
+++ b/TextSetup.tex
@@ -4,3 +4,6 @@
 \usepackage[utf8]{inputenc} %input encoding. Can be used on Linux, Mac and Windows         
 \usepackage[danish]{babel} %Split words accoding to English
 \usepackage{lmodern} % Font
+
+\setlength\parindent{0pt} %No indent
+\setlength\parskip{12pt} % More than a single line break will give ONE linebreak.
