--- a/TableSetup.tex
+++ b/TableSetup.tex
@@ -13,3 +13,12 @@
 \usepackage{color, colortbl}
 \definecolor{gr}{gray}{0.9}
 %\rowcolor{gr}
+
+\newcommand{\ReadManu}[2]
+{
+	\parbox[t]{0.80\textwidth}
+	{
+		\textbf{#1} \\
+		#2
+	}
+}
