Add examples, add CiteSetup.tex

--- a/FigureSetup.tex
+++ b/FigureSetup.tex
@@ -2,9 +2,9 @@
 %--------------------------------------------------
 %\begin{figure}[hbtp]
 %\centering
-%\includegraphics[width =0.9 \textwidth]{filnavn-for-png}
-%\caption{Titel}
-%\label{fig:referenceNavn}
+%\includegraphics[width=0.9\textwidth]{filename-of-png}
+%\caption{Title}
+%\label{fig:referenceName}
 %\end{figure}
 %--------------------------------------------------
 
