--- a/TableSetup.tex
+++ b/TableSetup.tex
@@ -3,22 +3,12 @@
 \usepackage{tabularx}
 \usepackage{array}
 \usepackage{multirow} 
-\usepackage{multicol} 
-\usepackage{booktabs}
+\usepackage{multicol}
 \usepackage{wrapfig}
-\usepackage{longtable}
+\usepackage{booktabs,longtable}
 %\renewcommand{\arraystretch}{1.5}
 
 %Colors in tables
 \usepackage{color, colortbl}
 \definecolor{gr}{gray}{0.9}
 %\rowcolor{gr}
-
-\newcommand{\ReadManu}[2]
-{
-	\parbox[t]{0.80\textwidth}
-	{
-		\textbf{#1} \\
-		#2
-	}
-}
