Everything up - contians files not supposed to be there

--- a/Examples/Article/DummyPage2.tex
+++ b/Examples/Article/DummyPage2.tex
@@ -1,6 +1,6 @@
 %!TEX root = Main.tex
 
-\chapter{The figures and tables in your document}
+\section{The figures and tables in your document}
 
 When writing information down, it can get boring to read.
 Spice up that sh\dots text with some figures!
@@ -44,7 +44,7 @@ Or perhaps you want two figure side by  side like figure \ref{fig:Dummy3} and \r
 
 
 
-\section{Wall of text}
+\subsection{Wall of text}
 
 \lipsum[1-5]
 
@@ -56,11 +56,11 @@ Or perhaps you want two figure side by  side like figure \ref{fig:Dummy3} and \r
 \newpage
 
 \FloatBarrier
-\section{Some tables}
+\subsection{Some tables}
 
 It's table time.
 
-\subsection{How to table}
+\subsubsection{How to table}
 
 Have a look at Table \ref{tab:boring}.
 It's very boring.
@@ -81,7 +81,7 @@ It's very boring.
 \end{table}
 
 
-\subsection{An excel sheet}
+\subsubsection{An excel sheet}
 
 Dear lord, you did not just!
 Look what you did!
@@ -105,7 +105,7 @@ It's ugly as a new born baby's leftovers!
 \end{table}
 
 
-\subsection{An exotic table}
+\subsubsection{An exotic table}
 
 Lets add a header above and under the bold text\dots and at the end.
 And lets add some colors.
@@ -131,7 +131,7 @@ Now you have a chance of seeing what is happening on each line with worrying abo
 \end{table}
 
 \newpage
-\subsection{Long-ass table -- aka. multi pages}
+\subsubsection{Long-ass table -- aka. multi pages}
 
 You need that?
 YES -- ALWAYS in need of more!
