--- a/TableOfContentSetup.tex
+++ b/TableOfContentSetup.tex
@@ -1,5 +1,5 @@
 
-%Dybde på indholdsfortegnelse
+%Depth of Table of Content
 %----------------------------------------------------------
 %Chapter, section, subsection, subsubsection
 %----------------------------------------------------------
